# vulkan-rs

./: .gitignore  Cargo.toml  README.md  engine.code-workspace  external-dependencies.json  externs.json  scripts.toml
.github/workflows/: rust.yml
boid/: Cargo.toml
boid-editor/: Cargo.toml
boid-editor/src/: main.rs
boid/assets/: boid.json  fragment.glsl  vertex.glsl
boid/src/: lib.rs
crystal-sphinx/: Cargo.toml
crystal-sphinx-editor/: Cargo.toml
crystal-sphinx-editor/src/: main.rs
crystal-sphinx/assets/shaders/text/: fragment.glsl
crystal-sphinx/src/: lib.rs  main.rs
crystal-sphinx/src/graphics/: _.rs  text_render.rs  ui_render.rs
demo-triangle/: Cargo.toml
demo-triangle-editor/: Cargo.toml
demo-triangle-editor/src/: main.rs
demo-triangle/assets/: triangle_frag.glsl  triangle_vert.glsl  triangle_vert.json
demo-triangle/src/: lib.rs  main.rs  renderer.rs  vertex.rs
demo-triangle/src/render/: TriangleRenderer.rs
demo/boid-editor/: Cargo.toml
demo/ui/: Cargo.toml
demo/ui-editor/: Cargo.toml
demo/ui-editor/src/: main.rs
derive/: Cargo.toml
derive/src/: lib.rs
dnd5e/character/: 459d0083-d099-45fc-ab9c-26c63cb8160a.kdl  b754ee22-0ea6-473e-9168-f002c72b6192.kdl  e7f59f75-57f6-4183-bb86-2c4290e4b729.kdl
evcs/: Cargo.toml
extern-reader/: Cargo.toml
install-dependencies/: Cargo.toml
install-externs/: Cargo.toml
install-externs/src/: main.rs
src/: lib.rs  shader.rs  vector.rs
src/buffer/: _.rs  (+1 more)
temportal-engine-editor/: Cargo.toml
temportal-engine-editor/src/: build.rs  editor.rs  lib.rs  settings.rs
temportal-engine-editor/src/asset/: _.rs  build.rs  manager.rs  metadata.rs  package.rs
temportal-engine-editor/src/graphics/: _.rs  font.rs  sdf-builder.rs  shader.rs  texture.rs
temportal-engine-editor/src/ui/: _.rs  element.rs  ui.rs  workspace.rs
temportal-engine-editor/src/ui/windows/: simulation.rs
temportal-graphics/: Cargo.toml  README.md
temportal-graphics/src/: allocator.rs  context.rs  instance.rs  lib.rs  physical_device.rs  shader.rs  utility.rs
temportal-graphics/src/alloc/: _.rs  allocator.rs  info.rs  memory.rs
temportal-graphics/src/buffer/: buffer.rs  builder.rs
temportal-graphics/src/command/: barrier.rs  buffer.rs  framebuffer.rs  info-present.rs  info-submit.rs  lib.rs  op_copy.rs  op_present.rs  op_submit.rs  pool.rs  syncing.rs
temportal-graphics/src/descriptor/: _.rs  set.rs  update.rs
temportal-graphics/src/descriptor/layout/: builder.rs  layout.rs
temportal-graphics/src/descriptor/pool/: builder.rs  pool.rs
temportal-graphics/src/descriptor/set/: _.rs  builder.rs  set.rs
temportal-graphics/src/device/: _.rs  lib.rs  physical.rs
temportal-graphics/src/device/logical/: device.rs  info.rs  lib.rs  queue.rs
temportal-graphics/src/device/swapchain/: builder.rs  info.rs  lib.rs  swapchain.rs
temportal-graphics/src/flags/: _.rs  blend.rs  shaderkind.rs
temportal-graphics/src/general/: app_info.rs  lib.rs  surface.rs
temportal-graphics/src/image/: builder.rs  image.rs
temportal-graphics/src/image_view/: _.rs  builder.rs  view.rs
temportal-graphics/src/instance/: create_info.rs  info.rs  instance.rs  lib.rs
temportal-graphics/src/object/: _.rs  allocation_info.rs  lib.rs
temportal-graphics/src/object/buffer/: _.rs  buffer.rs
temportal-graphics/src/object/image/: _.rs  builder.rs  image.rs  view-info.rs  view.rs  view_info.rs
temportal-graphics/src/pipeline/: _.rs  color_blend.rs  info.rs  layout.rs  lib.rs  pipeline.rs  rasterization.rs  shader_stage.rs  vertex.rs  viewport.rs
temportal-graphics/src/renderpass/: attachment.rs  clear_value.rs  info.rs  instruction.rs  lib.rs  pass.rs  subpass.rs
temportal-graphics/src/sampler/: _.rs  builder.rs  sampler.rs
temportal-graphics/src/shader/: info.rs  lib.rs  module.rs  shader.rs
temportal-graphics/src/structs/: subresource.rs
temportal-graphics/src/utility/: _.rs  error.rs  lib.rs  macros.rs  scissor.rs  viewport.rs  vulkan_info.rs  vulkan_object.rs
temportal-math/: Cargo.toml
vulkan/: Cargo.toml
vulkan-rs/: Cargo.toml
vulkan/src/: context.rs  descriptor.rs  lib.rs  procedure.rs  shader.rs
vulkan/src/alloc/: _.rs  allocator.rs  info.rs  memory.rs
vulkan/src/buffer/: buffer.rs  builder.rs
vulkan/src/command/: _.rs  barrier.rs  buffer.rs  frame.rs  framebuffer.rs  mod.rs  op_copy.rs  op_present.rs  op_submit.rs  pool.rs  syncing.rs
vulkan/src/command/frame/: buffer.rs  multi_builder.rs  single_builder.rs
vulkan/src/command/pool/: builder.rs  mod.rs  pool.rs
vulkan/src/descriptor/: _.rs  layout.rs  pool.rs  set.rs  update.rs
vulkan/src/descriptor/layout/: _.rs  builder.rs  layout.rs
vulkan/src/descriptor/pool/: builder.rs  pool.rs
vulkan/src/device/: _.rs  physical.rs  swapchain.rs
vulkan/src/device/logical/: _.rs  device.rs  info.rs  queue.rs
vulkan/src/device/swapchain/: _.rs  builder.rs  khr.rs  memory.rs  swapchain.rs
vulkan/src/device/swapchain/khr/: builder.rs  swapchain.rs
vulkan/src/device/swapchain/memory/: swapchain.rs
vulkan/src/flags/: _.rs  access.rs  attachment.rs  blend.rs  color_component.rs  format.rs  image_layout.rs  operation.rs  pipeline_stage.rs  sample_count.rs  shaderkind.rs
vulkan/src/general/: _.rs  app_info.rs  surface.rs
vulkan/src/image/: _.rs  builder.rs  image.rs
vulkan/src/image_view/: _.rs  builder.rs  view.rs
vulkan/src/instance/: _.rs  info.rs  instance.rs
vulkan/src/pipeline/: _.rs  builder.rs  layout.rs  pipeline.rs  state.rs
vulkan/src/pipeline/state/: color_blend.rs  depth_stencil.rs  dynamic.rs  multisampling.rs  rasterization.rs  topology.rs  vertex.rs  viewport.rs
vulkan/src/procedure/: attachment.rs  dependency.rs  phase.rs  procedure.rs
vulkan/src/procedure/attachment/: attachment.rs  reference.rs  set.rs
vulkan/src/renderpass/: _.rs  attachment.rs  clear_value.rs  info.rs  instruction.rs  pass.rs  subpass.rs
vulkan/src/sampler/: _.rs  builder.rs  sampler.rs
vulkan/src/structs/: _.rs  subresource.rs
vulkan/src/utility/: _.rs  builder.rs  error.rs  macros.rs  object.rs  object_name.rs  scissor.rs  viewport.rs
(+122 files in other folders)
