
[workspace]
members = [
	"extern-reader", "install-externs",
	"temportal-math",
	"vulkan-rs",
	"temportal-engine", "temportal-engine-editor",
	"demo/triangle", "demo/triangle-editor",
	"demo/ui", "demo/ui-editor",
	"demo/boid", "demo/boid-editor",
	"crystal-sphinx", "crystal-sphinx-editor",
]
default-members = [
	"temportal-math", "vulkan-rs",
	"demo/triangle", "demo/triangle-editor",
	"demo/ui", "demo/ui-editor",
	"demo/boid", "demo/boid-editor",
	"crystal-sphinx", "crystal-sphinx-editor",
]
