[package]
name = "crystal-sphinx-editor"
version = "0.1.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
profile = []

[dependencies]
temportal-engine = { path = "../temportal-engine" }
temportal-engine-editor = { path = "../temportal-engine-editor" }
crystal-sphinx = { path = "../crystal-sphinx" }
imgui = "0.7"
log = "0.4.14"
optick = "1.3.1"
