[package]
name = "demo-triangle"
version = "0.1.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
temportal-engine = { path = "../temportal-engine" }
temportal-math = { path = "../temportal-math" }
temportal-graphics = { path = "../temportal-graphics" }
log = { version = "0.4.14", features = ["std"] }
