[package]
name = "temportal-engine-editor"
version = "0.1.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
temportal-engine = { path = "../temportal-engine" }
temportal-graphics = { path = "../temportal-graphics" }
log = { version = "0.4.14", features = ["std"] }
sdl2 = "0.34"
gl = "0.14"
imgui = "0.7"
imgui-sdl2 = "0.14.0"
imgui-opengl-renderer = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
rmp = "0.8.10"
rmp-serde = "0.15.4"
shaderc = "0.7.2"
zip = "0.5.12"
freetype-rs = "0.28.0"
image = "0.23.14"
