[package]
name = "temportal-graphics"
version = "0.1.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
temportal-math = { path = "../temportal-math" }
log = "0.4.14"
sdl2 = "0.34"
ash = "0.32.0"
ash-window = "0.6.0"
raw-window-handle = "0.3.3"
vk-mem = "0.2.0"
shaderc = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
memoffset = "0.6.3"
