[package]
name = "vulkan-rs"
version = "0.1.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
derive = ["vulkan-rs-derive"]

[dependencies]
vulkan-rs-derive = { version = "0.1.0", optional = true, path = "../derive" }
anyhow = "1.0"
ash = "0.32"
ash-window = "0.6"
bytemuck = "1.7"
log = "0.4.14"
profiling = "1.0"
raw-window-handle = "0.3.4"
# vk-mem support has been discontinued and does not support ash >=0.33
# https://github.com/gwihlidal/vk-mem-rs/issues/54
# https://github.com/adrien-ben/imgui-rs-vulkan-renderer/issues/16
# TODO: Move to gpu-allocator
vk-mem = { git = "https://github.com/Chris--B/vk-mem-rs" }
shaderc = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
memoffset = "0.6.3"
enumset = { version = "1.0", features = ["serde"] }
thiserror = "1.0"
