[package]
name = "vulkan-rs"
version = "0.1.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
derive = ["vulkan-rs-derive"]

[dependencies]
vulkan-rs-derive = { version = "0.1.0", optional = true, path = "../derive" }
anyhow = "1.0"
ash = "0.37"
ash-window = "0.12"
bytemuck = "1.7"
log = "0.4.14"
profiling = "1.0"
raw-window-handle = "0.5"
gpu-allocator = "0.20"
shaderc = "0.8"
serde = { version = "1.0", features = ["derive"] }
memoffset = "0.7"
enumset = { version = "1.0", features = ["serde"] }
thiserror = "1.0"
