[package]
name = "ui-editor"
version = "0.1.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
temportal-engine = { path = "../../temportal-engine" }
temportal-engine-editor = { path = "../../temportal-engine-editor" }
ui = { path = "../ui" }
log = "0.4.14"
optick = "1.3.1"
